feature: start enter view

--- a/spring/src/main/resources/messages.properties
+++ b/spring/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ error.client.cpf-invalid=Informe um CPF valido
 error.cart.items-needed=O pedido precisa possuir items
 error.user.login-needed=O login é obrigatório
 error.user.password-needed=A senha é obrigatória
+error.auth.token-needed=O Token JWT é necessário
