--- a/spring/src/test/resources/messages.properties
+++ b/spring/src/test/resources/messages.properties
@@ -1,7 +1,8 @@
-error.client.code-needed=Informe o cÛdigo do cliente
-error.client.name-needed=O nome È obrigatÛrio
-error.client.cpf-needed=O CPF È obrigatÛrio
+error.client.code-needed=Informe o c√≥digo do cliente
+error.client.name-needed=O nome √© obrigat√≥rio
+error.client.cpf-needed=O CPF √© obrigat√≥rio
 error.client.cpf-invalid=Informe um CPF valido
 error.cart.items-needed=O pedido precisa possuir items
-error.user.login-needed=O login È obrigatÛrio
-error.user.password-needed=A senha È obrigatÛria
+error.user.login-needed=O login √© obrigat√≥rio
+error.user.password-needed=A senha √© obrigat√≥ria
+error.auth.token-needed=O Token JWT √© necess√°rio
