add SaleController and update ProductController

--- a/spring/src/main/resources/messages.properties
+++ b/spring/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ error.cart.items-needed=O pedido precisa possuir items
 error.user.login-needed=O login é obrigatório
 error.user.password-needed=A senha é obrigatória
 error.auth.token-needed=O Token JWT é necessário
+error.product.name-needed=Informe o nome do produto
+error.product.description-needed=Informe a descrição do produto
+error.product.price-needed=Informe o preço do produto
